Refactor methods to separate class and update dependent tests.